--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chicken.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Clucker</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/index.ts"></script>
-    <!--     <div>Hello {{username}}</div>
-    {{> button label='click'}} -->
   </body>
 </html>
